[#1002] VariableFunctionsUsageInspector: code grooming